package com.nn.safetransfer.ledger.domain;

public enum LedgerEntryType {
    CREDIT,
    DEBIT
}
