package com.nn.safetransfer.transfer.domain;

public enum TransferStatus {
    COMPLETED
}
